--- a/scb-ui-zk/src/main/webapp/pages/common/component/mail-recipient-selection.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/mail-recipient-selection.zul
@@ -3,7 +3,7 @@
 	    <tabs id="tabs" vflex="1" >
 	        <tab id="coursesSelectionTab" label="${c:l('txt.ui.menu.courses')}" onSelect="@command('courseTabSelectedCmd')" />
 	        <tab id="usersSelectionTab" label="${c:l('txt.ui.menu.users')}" onSelect="@command('usersTabSelectedCmd')" />
-	        <tab id="applicationsSelectionTab" label="${c:l('txt.ui.menu.applications')}"  />
+	        <tab id="applicationsSelectionTab" label="${c:l('txt.ui.menu.applications')}" onSelect="@command('courseApplicationTabSelectedCmd')"  />
 	    </tabs>
 	    
 	    <tabpanels vflex="1">
@@ -44,15 +44,6 @@
 				            	<hlayout sclass="pull-right">
 				            		<!-- Rocnik -->
 		            				<include src="/pages/common/component/context-year.zul"/>
-		            				
-		            				<button iconSclass="z-icon-download" 
-		            					onClick="@command('exportToExcel',listbox=courseList)" 
-		            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
-		            					sclass="toolbar-btn"/>
-		           					<button iconSclass="z-icon-refresh" 
-		           						onClick="@command('refreshDataCmd')" 
-		           						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
-		           						sclass="toolbar-btn"/>
 				            	</hlayout>
 				            </auxheader>
 				        </auxhead>
@@ -80,11 +71,16 @@
 				        </template>
 				    </listbox>
 				    
-				    <button label="OK"
-						onClick="@command('submitCourseSelectionCmd')"
-						sclass="btn-success"
-						style="margin-left: 10px;"
-						iconSclass="z-icon-check" />
+				    <hlayout style="padding-bottom: 1px;">
+					    <button label="${c:l('txt.ui.common.Add')}"
+							onClick="@command('submitCourseSelectionCmd')"
+							sclass="btn-success"
+							iconSclass="z-icon-plus" />
+		    			<button onClick="@command('closeCmd')" 
+							label="${c:l('txt.ui.ToClose')}"
+							style="margin-left: 10px;"
+							sclass="btn-light"/>
+					</hlayout>
 			    </vlayout>
 	        </tabpanel>
 	        
@@ -123,6 +119,7 @@
 									model="@load(vm.roleListWithEmptyItem)"
 									onSelect="@command('filterDomCmd')"
 									hflex="1"
+									height="25px"
 									mold="select" >
 									<template name="model">
 						               	<listitem label="@bind(each.label)" value="@bind(each)"/>
@@ -145,18 +142,118 @@
 				        </template>
 				    </listbox>
 	    			
-	    			<button label="OK"
-						onClick="@command('submitCmd')"
-						sclass="btn-success"
-						style="margin-left: 10px;"
-						iconSclass="z-icon-check" />
-						
+	    			<hlayout style="padding-bottom: 1px;">
+		    			<button label="${c:l('txt.ui.common.Add')}"
+							onClick="@command('submitCmd')"
+							sclass="btn-success"
+							iconSclass="z-icon-plus" />
+		    			<button onClick="@command('closeCmd')" 
+							label="${c:l('txt.ui.ToClose')}"
+							style="margin-left: 10px;" 
+							sclass="btn-light"/>
+	    			</hlayout>
 	    		</vlayout>
 	    	</tabpanel>
 	        
 	    	<!-- Prihlasky -->
 	    	<tabpanel>
-	    		Přihlášky
+	    		<vlayout>
+		    		<listbox model="@load(vm.courseApplicationList)"
+						id="courseApplicationList"
+						height="370px"
+						checkmark="true"
+						multiple="true"
+						selectedItems="@bind(vm.courseApplicationListSelected)"
+						emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+						class="listbox" >
+						
+				        <auxhead>
+				            <auxheader class="header" colspan="5" >			            	
+				            	<hlayout sclass="pull-right">
+				            		<!-- Rocnik -->
+		            				<include src="/pages/common/component/context-year.zul"/>
+				            	</hlayout>
+				            </auxheader>
+				        </auxhead>
+				        
+				        <!-- Filter -->
+				        <listhead >
+				            <listheader align="left" >
+				            	<textbox hflex="1"
+				            		placeholder="${c:l('txt.ui.common.participant')}"
+									value="@bind(vm.courseApplicationFilter.courseParticName)"
+									onChange="@command('filterCourseApplicationListCmd')"
+									onOK="@command('filterCourseApplicationListCmd')" />
+				            </listheader>
+				            <listheader align="left" >
+				            	<textbox hflex="1"
+				            		placeholder="${c:l('txt.ui.common.representative')}"
+									value="@bind(vm.courseApplicationFilter.courseParticRepresentative)"
+									onChange="@command('filterCourseApplicationListCmd')"
+									onOK="@command('filterCourseApplicationListCmd')" />
+				            </listheader>
+				            <listheader align="left" >
+				            	<textbox hflex="1"
+				            		placeholder="${c:l('txt.ui.common.email')}"
+									value="@bind(vm.courseApplicationFilter.email)"
+									onChange="@command('filterCourseApplicationListCmd')"
+									onOK="@command('filterCourseApplicationListCmd')" />
+					        </listheader>
+				            <listheader label="${c:l('txt.ui.common.inCourse')}" align="center" width="140px" >
+				            	<listbox selectedItem="@bind(vm.courseApplicationFilter.inCourse)"
+									onSelect="@command('filterCourseApplicationListCmd')"
+									mold="select"
+									width="50px"
+									model="@load(vm.booleanListItem)"
+									height="25px" >
+									<template name="model">
+										<listitem label="${each ? 'Ano' : (each eq null ? '' : 'Ne')}" value="${each}" />
+									</template>
+								</listbox>
+				            </listheader>
+				            <listheader label="${c:l('txt.ui.common.new2')}" align="center" width="180px" >
+				            	<listbox selectedItem="@bind(vm.courseApplicationFilter.newParticipant)"
+									onSelect="@command('filterCourseApplicationListCmd')"
+									mold="select"
+									width="50px"
+									model="@load(vm.booleanListItem)"
+									height="25px" >
+									<template name="model">
+										<listitem label="${each ? 'Ano' : (each eq null ? '' : 'Ne')}" value="${each}" />
+									</template>
+								</listbox>
+								<!-- Vymazat filtr -->
+								<button iconSclass="z-icon-trash" 
+	           						onClick="@command('refreshCourseApplicationListDataCmd')" 
+	           						style="margin-left: 10px;"
+	           						tooltiptext="${c:l('txt.ui.common.CleanFilter')}" />
+				            </listheader>
+				        </listhead>
+				         
+				        <template name="model">
+				            <listitem>
+				                <listcell label="${each.courseParticipant.contact.completeName}" />
+				                <listcell label="${each.courseParticRepresentative.contact.completeName}" />
+				                <listcell label="${each.courseParticRepresentative.contact.email1}" />
+			            		<listcell sclass="big-icon" iconSclass="z-icon-check-circle" style="color: #87B87F;" visible="${each.courseParticipant.inCourse()}" tooltiptext="${each.courseParticipant.getInCourseInfo()}" />
+		               			<listcell visible="${!each.courseParticipant.inCourse()}" />
+		               			<listcell sclass="big-icon" iconSclass="z-icon-check-circle" style="color: #87B87F;" visible="${!each.currentParticipant}"  />
+		               			<listcell visible="${each.currentParticipant}" />
+				            </listitem>
+				        </template>
+				    </listbox>
+				    
+				    <hlayout style="padding-bottom: 1px;">
+				    	<button label="${c:l('txt.ui.common.Add')}"
+							onClick="@command('submitCourseApplicationSelectionCmd')"
+							sclass="btn-success"
+							iconSclass="z-icon-plus" />
+				    	<button onClick="@command('closeCmd')" 
+							label="${c:l('txt.ui.ToClose')}"
+							style="margin-left: 10px;"
+							sclass="btn-light"/>
+				    </hlayout>
+	    		</vlayout>
 	    	</tabpanel>
 	    </tabpanels>
 	</tabbox>
