--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -17,7 +17,19 @@
 		sclass="scb-view scb-view-900">
 			
 			<hlayout>
-				<page-toolbar width="100%" self="@{define(pageToolbar)}" visible="@load(vm.isBackButtonVisible())"/>
+				<hlayout sclass="scb-page-toolbar" width="100%" self="@{define(pageToolbar)}">
+					<button onClick="@command('backCmd')" 
+							label="${c:l('txt.ui.common.Back')}" 
+							iconSclass="z-icon-arrow-left" 
+							sclass="btn-light fix-btn-icon"/>
+					<!-- Zpravy -->
+           			<button label="${c:l('txt.ui.common.Messaging')}" 
+           				iconSclass="z-icon-at"
+           				style="margin-left: 10px;"
+           				popup="messagePopup, position=after_start"
+	            		if="${vm.isLoggedUserInRole('ADMIN')}" />				
+				</hlayout>
+				
 	            <label value="${vm.pageHeadline}" sclass="scb-headline-big"/>
 	        </hlayout>
 	    
