--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -26,18 +26,18 @@
 			            <auxheader class="header" colspan="5" >
 			            	<hlayout sclass="pull-left">
 			            		<!-- Zpravy -->
-		            			<button label="${c:l('txt.ui.common.Messaging')}" 
+		            			<button tooltiptext="${c:l('txt.ui.common.Messaging')}" 
 		            				iconSclass="z-icon-at"
 		            				popup="messagePopup, position=after_start"
 				            		if="${vm.isLoggedUserInRole('ADMIN')}" />
-					                <menupopup id="messagePopup" hflex="min" if="${vm.isLoggedUserInRole('ADMIN')}" >
-			            				<!-- Nova zprava zobrazenym ucastnikum. -->
-										<menuitem label="${c:l('txt.ui.common.NovaZprava')}" onClick="@command('goToSendEmailCmd')" />
-										<!-- Odeslani instrukci k platbe za prvni pololeti. -->
-										<menuitem label="${c:l('txt.ui.common.PaymentInstructionsFirstSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=true)" />
-										<!-- Odeslani instrukci k platbe za druhe pololeti. -->
-										<menuitem label="${c:l('txt.ui.common.PaymentInstructionsSecondSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=false)" />
-							       	</menupopup>
+				                <menupopup id="messagePopup" hflex="min" if="${vm.isLoggedUserInRole('ADMIN')}" >
+		            				<!-- Nova zprava zobrazenym ucastnikum. -->
+									<menuitem label="${c:l('txt.ui.common.NovaZprava')}" onClick="@command('goToSendEmailCmd')" />
+									<!-- Odeslani instrukci k platbe za prvni pololeti. -->
+									<menuitem label="${c:l('txt.ui.common.PaymentInstructionsFirstSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=true)" />
+									<!-- Odeslani instrukci k platbe za druhe pololeti. -->
+									<menuitem label="${c:l('txt.ui.common.PaymentInstructionsSecondSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=false)" />
+						       	</menupopup>
 			            	</hlayout>
 			            	
 			            	<hlayout sclass="pull-right">
