--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
@@ -43,6 +43,8 @@
 		            	<hlayout sclass="pull-right">
 		            		<!-- Rocnik -->
             				<include src="/pages/common/component/context-year.zul"/>
+            				<!-- Zpravy -->
+				            <send-mail-button buttonSclass="toolbar-btn" />
             				<button iconSclass="z-icon-download" 
             					onClick="@command('exportToExcel',listbox=courseApplicationList)" 
             					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
