--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -54,6 +54,8 @@
 		            		<!-- Rocnik -->
             				<include src="/pages/common/component/context-year.zul"/>
             				
+            				<!-- Zpravy -->
+		           			<send-mail-button buttonSclass="toolbar-btn" />
             				<button iconSclass="z-icon-download" 
             					onClick="@command('exportToExcel',listbox=courseList)" 
             					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
