--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -15,7 +15,15 @@
 	    form="@id('fx') @load(vm) @save(vm, before='submit')" >
 		
             <hlayout>
-            	<page-toolbar width="100%" self="@{define(pageToolbar)}" visible="@load(vm.isBackButtonVisible())"/>
+	            <hlayout sclass="scb-page-toolbar" width="100%" self="@{define(pageToolbar)}" visible="@load(vm.isBackButtonVisible())">
+					<button onClick="@command('backCmd')" 
+						label="${c:l('txt.ui.common.Back')}" 
+						iconSclass="z-icon-arrow-left" 
+						sclass="btn-light fix-btn-icon"/>
+					<!-- Zpravy -->
+	            	<send-mail-button />			
+				</hlayout>
+			
                 <label value="${vm.pageHeadline}" sclass="scb-headline-big"/>
             </hlayout>
 			
